--- a/frontend/src/css/index.css
+++ b/frontend/src/css/index.css
@@ -21,3 +21,33 @@ body,
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 } */
+
+/* section */
+.section {
+  padding: 1rem 0;
+}
+.section-center-featured {
+  width: 15vw;
+  margin: 0 auto;
+  max-width: var(--max-width);
+}
+
+.text-center {
+  text-align: center;
+}
+@keyframes spinner {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.loading {
+  width: 6rem;
+  height: 6rem;
+  margin: 0 auto;
+  margin-top: 10rem;
+  border-radius: 50%;
+  border: 4px solid #ccc;
+  border-top-color: var(--clr-primary-5);
+  animation: spinner 0.6s linear infinite;
+}
