--- a/frontend/src/css/index.css
+++ b/frontend/src/css/index.css
@@ -47,27 +47,30 @@ Variables
 ===============
 */
 
-:root {
+/* :root {
   /* dark shades of primary color*/
-  --clr-primary-1: hsl(22, 28%, 21%);
+/* --clr-primary-1: hsl(22, 28%, 21%);
   --clr-primary-2: hsl(22, 28%, 29%);
   --clr-primary-3: hsl(22, 28%, 37%);
-  --clr-primary-4: hsl(22, 28%, 45%);
-  /* primary/main color */
-  --clr-primary-5: hsl(22, 31%, 52%); /* buttons */
-  /* lighter shades of primary color */
-  --clr-primary-6: hsl(22, 31%, 60%);
+  --clr-primary-4: hsl(22, 28%, 45%); */
+/* primary/main color */
+/* --clr-primary-5: hsl(22, 31%, 52%); buttons */
+/* lighter shades of primary color */
+/* --clr-primary-6: hsl(22, 31%, 60%);
   --clr-primary-7: hsl(22, 31%, 67%);
   --clr-primary-8: hsl(20, 31%, 74%);
   --clr-primary-9: hsl(22, 31%, 81%);
-  --clr-primary-10: hsl(22, 31%, 88%);
-  /* darkest grey - used for headings */
-  --clr-grey-1: hsl(209, 61%, 16%);
+  --clr-primary-10: hsl(22, 31%, 88%); */
+/* darkest grey - used for headings */
+/* --clr-grey-1: hsl(209, 61%, 16%);
   --clr-grey-2: hsl(211, 39%, 23%);
   --clr-grey-3: hsl(209, 34%, 30%);
-  --clr-grey-4: hsl(209, 28%, 39%);
-  /* grey used for paragraphs */
+  --clr-grey-4: hsl(209, 28%, 39%); */
+/* grey used for paragraphs */
+:root {
   --clr-grey-5: hsl(210, 22%, 49%);
+}
+/* 
   --clr-grey-6: hsl(209, 23%, 60%);
   --clr-grey-7: hsl(211, 27%, 70%);
   --clr-grey-8: hsl(210, 31%, 80%);
@@ -86,7 +89,7 @@ Variables
   --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
   --max-width: 1170px;
   --fixed-width: 620px;
-}
+}  */
 /*
 =============== 
 Global Styles
@@ -108,7 +111,7 @@ Global Styles
   line-height: 1.5;
   font-size: 0.875rem;
 } */
-ul {
+/* ul {
   list-style-type: none;
 }
 a {
@@ -175,7 +178,7 @@ p {
 }
 /*  global classes */
 
-@media screen and (min-width: 992px) {
+/* @media screen and (min-width: 992px) {
   .section-center {
     width: 95vw;
   }
@@ -188,7 +191,7 @@ p {
     transform: rotate(360deg);
   }
 }
-
+*/
 .loading {
   width: 6rem;
   height: 6rem;
@@ -219,7 +222,7 @@ p {
   color: var(--clr-primary-1);
   background: var(--clr-primary-7);
 } */
-.title {
+/* .title {
   text-align: center;
 }
 .title .underline {
@@ -236,4 +239,4 @@ p {
 }
 .page {
   min-height: calc(100vh - (20vh + 10rem));
-}
+} */
