--- a/frontend/src/pages/widgets/ArticleWidget.css
+++ b/frontend/src/pages/widgets/ArticleWidget.css
@@ -1,8 +1,11 @@
 .boxWrapper {
+  width: 30%;
+}
+
+main {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  /* width: 30%; */
 }
 
 @media (min-width: 768px) {
