--- a/frontend/src/pages/CartForProducts/CartForProducts.css
+++ b/frontend/src/pages/CartForProducts/CartForProducts.css
@@ -38,10 +38,10 @@
   margin: 10px;
   cursor: pointer;
 }
-img {
+/* img {
   width: 30%;
   height: 24rem;
-}
+} */
 
 .subtotal {
   font-size: 2rem;
